deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitops-demo-service
  namespace: default
  labels:
    app: gitops-demo
spec:
  selector:
    app: gitops-demo
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
  type: LoadBalancer
  sessionAffinity: None
